; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_read_type_var.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_read_type_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_tree = type opaque
%struct.tl_tree_var_type = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32* }

@total_ref_cnt = common dso_local global i32 0, align 4
@persistent_tree_nodes = common dso_local global i32 0, align 4
@total_tree_nodes_existed = common dso_local global i32 0, align 4
@tl_pvar_type_methods = common dso_local global i32 0, align 4
@FLAG_NOVAR = common dso_local global i32 0, align 4
@FLAG_BARE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_tree* @read_type_var(i32* %0) #0 {
  %2 = alloca %struct.tl_tree*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.tl_tree_var_type*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call %struct.tl_tree_var_type* @zzmalloc0(i32 24)
  store %struct.tl_tree_var_type* %5, %struct.tl_tree_var_type** %4, align 8
  %6 = call i32 @ADD_PMALLOC(i32 24)
  %7 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %8 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i32 1, i32* %9, align 8
  %10 = load i32, i32* @total_ref_cnt, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @total_ref_cnt, align 4
  %12 = load i32, i32* @persistent_tree_nodes, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @persistent_tree_nodes, align 4
  %14 = load i32, i32* @total_tree_nodes_existed, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @total_tree_nodes_existed, align 4
  %16 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %17 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 2
  store i32* @tl_pvar_type_methods, i32** %18, align 8
  %19 = call i8* (...) @tl_parse_int()
  %20 = ptrtoint i8* %19 to i32
  %21 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %22 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = call i8* (...) @tl_parse_int()
  %24 = ptrtoint i8* %23 to i32
  %25 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %26 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  store i32 %24, i32* %27, align 4
  %28 = call i64 (...) @tl_parse_error()
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %1
  store %struct.tl_tree* null, %struct.tl_tree** %2, align 8
  br label %59

31:                                               ; preds = %1
  %32 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %33 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = load i32*, i32** %3, align 8
  %36 = load i32, i32* %35, align 4
  %37 = icmp sge i32 %34, %36
  br i1 %37, label %38, label %44

38:                                               ; preds = %31
  %39 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %40 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = add nsw i32 %41, 1
  %43 = load i32*, i32** %3, align 8
  store i32 %42, i32* %43, align 4
  br label %44

44:                                               ; preds = %38, %31
  %45 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %46 = getelementptr inbounds %struct.tl_tree_var_type, %struct.tl_tree_var_type* %45, i32 0, i32 1
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = load i32, i32* @FLAG_NOVAR, align 4
  %50 = load i32, i32* @FLAG_BARE, align 4
  %51 = or i32 %49, %50
  %52 = and i32 %48, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %44
  store %struct.tl_tree* null, %struct.tl_tree** %2, align 8
  br label %59

55:                                               ; preds = %44
  %56 = load %struct.tl_tree_var_type*, %struct.tl_tree_var_type** %4, align 8
  %57 = bitcast %struct.tl_tree_var_type* %56 to i8*
  %58 = bitcast i8* %57 to %struct.tl_tree*
  store %struct.tl_tree* %58, %struct.tl_tree** %2, align 8
  br label %59

59:                                               ; preds = %55, %54, %30
  %60 = load %struct.tl_tree*, %struct.tl_tree** %2, align 8
  ret %struct.tl_tree* %60
}

declare dso_local %struct.tl_tree_var_type* @zzmalloc0(i32) #1

declare dso_local i32 @ADD_PMALLOC(i32) #1

declare dso_local i8* @tl_parse_int(...) #1

declare dso_local i64 @tl_parse_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
